--- a/cell02/ex02/parallax.css
+++ b/cell02/ex02/parallax.css
@@ -20,6 +20,7 @@
 	background-position:center;
 	background-repeat:no-repeat;
 	background-size:cover;
+	background-attachment: fixed;
 }
 
 .separator {
