--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -1,17 +1,50 @@
-.title {
+.body {
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
 	align-items: center;
-	align-content: center;
+	background: white;
+	margin: 0px;
+}
+
+.card-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.card {
+	border: 2px solid black;
+	border-radius: 16px;
+	padding: 32px 48px;
+	background: white;
+	box-shadow: 0px 4px 16px gray;
+}
+
+.contact_btn {
+	display: inline-block;
+	margin-top: 16px;
+	padding: 10px;
+	background: blue;
+	color: white;
+	border: none;
+	border-radius: 0px 4px 16px;
+	text-decoration: none;
+	font-size: 18px;
+	cursor: pointer;
+	transition: background 1s;
+}
+
+.contact_btn {
+	background: blue;
+}
+.title {
+	text-align: center;
 	font-size: 50px;
 	font-style: italic;
 	margin: 0px;
 
-}
-
-.profile_picture {
-	width: 200px;
-	height: 200px;
-	display: flex;
-	margin: 0px;
 }
 
 .username {
