--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -22,23 +22,17 @@
 	box-shadow: 0px 4px 16px gray;
 }
 
-.contact_btn {
+.contact-btn {
 	display: inline-block;
-	margin-top: 16px;
-	padding: 10px;
-	background: blue;
+	padding: 12px 24px;
+	background: #007BFF;
 	color: white;
-	border: none;
-	border-radius: 0px 4px 16px;
-	text-decoration: none;
-	font-size: 18px;
+	border-radius: 8px;
+	font-size: 16px;
 	cursor: pointer;
-	transition: background 1s;
+	text-align: center;
 }
 
-.contact_btn {
-	background: blue;
-}
 .title {
 	text-align: center;
 	font-size: 50px;
@@ -55,7 +49,8 @@
 .description {
 	padding: 10px;
 	margin: 0px;
-	line-height: 0%;
+	line-height: 1.5;
+	text-align: center;
 }
 
 .social_icon {
