--- a/cell03/ex00/backgroound.css
+++ b/cell03/ex00/backgroound.css
@@ -1,6 +1,7 @@
-.background {
-	 display: flex;
-	 width: 100vw;
-	 height: 100vh;
-	 background-color: var(any);
+body {
+	height: 100vh;
+	margin: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
